# 5g-traffic-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
anomalies/: inject_persistent_queue.py  teid_mapping.json
config/: profiles.json  teid_map_1000.json  teid_map_2000.json
sample_pcaps/: geforce_50.pcap  geforce_50_gtpu.pcap
scripts/: anomaly_controller.py  config.json  generate_gtpu_pcaps.py  generate_teid_config.py  gtpu_cbr_generator.sh  gtpu_encapsulator.sh  gtpu_replay.sh  gtpu_sender_test.sh  launch_flows.py  pcap_head.sh  pps.sh  prepare_pcaps.py  rate.sh  replay_all_gtpu_pcaps.py  trtcm_estimator.py
src/: CMakeLists.txt  gtpu_anomaly_injector.c  gtpu_cbr_generator.c  gtpu_encap_replay.c  gtpu_encapsulator.c  gtpu_replay.c  gtpu_sender_test.c  gtpu_traffic_generator.c  pcap_analyzer.c
